--- a/js-clock/css/style.css
+++ b/js-clock/css/style.css
@@ -51,3 +51,20 @@ body {
     transition: all .05s;
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
+
+.hour-hand {
+    width: 30%;
+    left: 20%;
+}
+
+.min-hand {
+    width: 40%;
+    left: 10%;
+}
+
+.second-hand {
+    width: 40%;
+    left: 10%;
+    height: 3px;
+    /* border-radius: 0; */
+}
